egg-dev/deploy/2.0.0/k8s/wave-egg-online.yml
---
apiVersion: apps/v1 
kind: Deployment
metadata:
  name: wave-egg-deployment-online
  namespace: online-frontend
  labels:
    deployment: wave-egg-deployment-online
spec:
  replicas: 1
  selector:
    matchLabels:
      pod: wave-egg-pod-online
  template:
    metadata:
      labels:
        pod: wave-egg-pod-online
    spec:
      nodeSelector:                    
        nodeGroup: online
      containers:
      - name: wave-egg
        image: registry.cn-beijing.aliyuncs.com/wavewisdom-bj-registry/wave-egg:2.0.0
        imagePullPolicy: Always
        volumeMounts:
        - name: host-time
          mountPath: /etc/localtime
        ports:
        - containerPort: 8080
      imagePullSecrets:
      - name: registry-secret
      volumes:
      - name: host-time
        hostPath:
          path: /etc/localtime
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wave-egg-ingress-online
  namespace: online-frontend
spec:
  rules:                                                     
  - host: www.wavewisdom-bj.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wave-egg-service-online
          servicePort: 80
  - host: www.wavewisdom.com
    http:
      paths:
      - path: /
        backend:
          serviceName: wave-egg-service-online
          servicePort: 80       
---
apiVersion: v1
kind: Service
metadata:
  name: wave-egg-service-online
  namespace: online-frontend
  labels:
    service: wave-egg-service-online
spec:
  selector:
    pod: wave-egg-pod-online
  ports:
  - protocol: TCP
    name: http
    port: 80
    targetPort: 8080
  type: ClusterIP
